fix modal log-register on small height

--- a/src/css/modal-login-register.css
+++ b/src/css/modal-login-register.css
@@ -5,9 +5,10 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   z-index: 999;
+  /* overflow-y: scroll; */
 }
 
 .invisible {
@@ -25,24 +26,27 @@
 }
 
 .modal-log-reg-container{
-  position: relative;
+  display: flex;
+  flex-direction: column;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
   color: #cdb67c;
   z-index: 10;
-  background-color: #212121;
   margin: 0 62px;
   z-index: 2;
   width: 100%;
   max-width: 769px;
+  overflow-y: auto;
+}
+
+.form-wrapper {
+  background-color: #212121;
 }
 
 .modal-header {
+  margin-top: auto;;
   display: flex;
-  position: absolute;
-  bottom: 100%;
-  left: 0%;
 }
 
 .modal-header .login-btn,
@@ -56,6 +60,10 @@
   color: #fff;
   font-size: 18px;
   font-weight: 400;
+}
+
+.form-wrapper {
+  margin-bottom: auto;
 }
 
 .form-container {
@@ -198,17 +206,13 @@ input[type="password"] {
 
 @media (max-width: 480px){
   .modal-header {
-    position: absolute;
-    bottom: 100%;
-    left: 0%;
-    width: 100%;
   } 
   .modal-header .login-btn,
   .modal-header .registration-btn {
     padding: 15px;
   }
   .modal-log-reg-container {
-    margin: 0;
+    margin: 0 20px;
   }
   .form-container {
     padding: 50px 30px;
